--- a/app/frontend/spagnesi/template/base/header/header.twig
+++ b/app/frontend/spagnesi/template/base/header/header.twig
@@ -4,15 +4,17 @@
     <section class="navbar">
 
             <div class="row">
-                <div class="col">
+                <div class="col-1">
 
                 </div>
-                <div class="text-center">
+                <div class="text-center col-10">
                     <div id="mainmenu" class="container">
                         <nav>
-                            <a href="/divani">Divani</a>
-                            <a href="/poltrone">Poltrone</a>
-                            <a href="/divani-letto">Divani letto</a>
+                            <ul>
+                                <li><a href="/divani">Divani</a></li>
+                                <li><a href="/poltrone">Poltrone</a></li>
+                                <li><a href="/divani-letto">Divani letto</a></li>
+                            </ul>
                         </nav>
 
                         <a href="/">
@@ -21,15 +23,23 @@
                         </a>
 
                         <nav>
-                            <a href="/divani">Divani</a>
-                            <a href="/poltrone">Poltrone</a>
-                            <a href="/divani-letto">Divani letto</a>
+                            <ul>
+                                <li><a href="/outlet">Outlet</a></li>
+                                <li><a href="/guida-pelli-tessuti">Pelli e Tessuti</a></li>
+                                <li><a href="#">Divani Lab</a>
+                                    <ul class="submenu">
+                                        <li><a href="/divani">Qualità Artigiana</a></li>
+                                        <li><a href="/divani">Pagamenti Sicuri</a></li>
+                                        <li><a href="/divani">Spedizioni e Resi</a></li>
+                                        <li><a href="/divani">F.A.Q.</a></li>
+                                    </ul>
+                                </li>
+                            </li>                            
                         </nav>
-
 
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-1">
 
                 </div>
             </div>
