--- a/app/frontend/spagnesi/template/pagine/home.twig
+++ b/app/frontend/spagnesi/template/pagine/home.twig
@@ -6,22 +6,22 @@
         <img src="/assets/img/slide-home.png">
 
         <article class="text-center">
-            <h2>Prova qualcosa</h2>
+            <h2>Qualità artigiana in fabbrica!</h2>
             <p>
-                Lorem ipsum d
-                olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum vel, porta et eros. Vestibulum condimentum lectus in convallis feugiat. Sed vulputate fringilla felis. Aliquam ut arcu et dui feugiat scelerisque eu quis diam. Mauris placerat congue dui sit amet blandit. Phasellus condimentum libero vel velit auctor, sit amet tincidunt velit varius.
+                Tutti i <strong>divani</strong> e le <strong>poltrone</strong> DivaniLab sono realizzati a mano dai nostri artigiani che grazie alla loro esperienza e ai materiali di alta qualità realizzano <strong>prodotti unici</strong> dal design moderno ed elegante.<br />
+                Scopri tutti i prodotti della sezione <strong><a href="#">Outlet</a></strong> in <strong>pronta consegna</strong> a prezzi imperdibili!<br />
+                <span class="evid">Sconti fino al 70%</span>
             </p>
 
             <div class="text-center">
-                <a href="" class="btn btn-primary">Vedi offerta</a>
+                <a href="" class="btn btn-primary">Vai ai prodotti in offerta!</a>
             </div>
         </article>
     </section>
 
     <div class="container text-center mt-5">
-        <h2>Tpoasd</h2>
-        <p> Lorem ipsum d
-            olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum v</p>
+        <h2>Trova il tuo divano ideale</h2>
+        <p> Tutte le nostre collezioni sono disponibili con <strong>rivestimento in pelle</strong>, <strong>eco-pelle</strong> o <strong>tessuto</strong>.<br />Cerca il divano ideale e personalizzalo secondo i tuoi gusti.</p><p>Il tuo divano verrà <strong>realizzato su misura</strong> in base al rivestimento selezionato</p>
         {% include "parti/barra-ricerca.twig" %}
     </div>
 
@@ -137,11 +137,13 @@
     <div class="container mt-5 mb-5">
         <div class="row">
             <div class="col-8">
-                <h2>Titolone</h2>
-                <h3>Titoletto</h3>
+                <h2>Artigianato Made in Italy</h2>
+                <h3>Il piacere di un divano fatto a mano</h3>
                 <p>
-                    Lorem ipsum d
-                    olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum vel, porta et eros. Vestibulum condimentum lectus in convallis feugiat. Sed vulputate fringilla felis. Aliquam ut arcu et dui feugiat scelerisque eu quis diam. Mauris placerat congue dui sit amet blandit. Phasellus condimentum libero vel velit auctor, sit amet tincidunt velit varius.
+                    <strong>DivaniLab</strong> si distingue per la <strong>qualità dei materiali</strong> utilizzati in tutti i modelli, per la <strong>cura al dettaglio</strong> dei nostri progettisti... e per <strong>l'esperienza dei mastri artigiani</strong> nel realizzarli. Tutto questo avviene in Italia, nel cuore della Toscana. 
+                    <br />
+                    Il risultato è un divano bello, comodo, piacevole al tatto e perfetto per completare il vostro arredamento.</p>
+                    <p>Avete già un televisore? <strong>Un mese di Netflix</strong> per godervi il nuovo divano ve lo offriamo noi! 
                 </p>
             </div>
             <div class="col-4">
@@ -158,12 +160,23 @@
         <img src="/assets/img/mocked/divanogrosso.png">
         <div class="info">
             <div class="container text-center">
-            <h2>Un salotto da sogno</h2>
-            <p>
-                Lorem ipsum d
-                olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum vel, porta et eros. Vestibulum condimentum lectus in convallis feugiat. Sed vulputate fringilla felis. Aliquam ut arcu et dui feugiat scelerisque eu quis diam. Mauris placerat congue dui sit amet blandit. Phasellus condimentum libero vel velit auctor, sit amet tincidunt velit varius.
-            </p>
-            <a href="" class="btn btn-secondary">Lasciati inspirare</a>
+            <h2>Personalizzato o in Pronta consegna?</h2>
+            <div class="row">
+                <div class="col-6 pr-5">
+                    <p>
+                        <strong>Nuova collezione: tutto su misura.</strong><br />
+                        DivaniLab realizza il vostro <strong>divano su misura</strong> in base al rivestimento e alle dimensioni che sceglierete durante l'acquisto.<br />Pertanto la consegna di tutti i nuovi modelli avviene in <strong>2/3 settimane</strong>... giusto il tempo di realizzare il vostro prodotto personalizzato e consegnarlo direttamente a casa vostra!
+                    </p>
+                    <a href="" class="btn btn-secondary">Nuova Collezione</a>
+                </div>
+                <div class="col-6 pl-5">
+                    <p>
+                        <strong>Outlet: pronta consegna.</strong><br />
+                        La sezione Outlet raccoglie modelli realizzati in stock o di precedenti collezioni. Non è possibile personalizzare questi prodotti perché sono già <strong>disponibili in magazzino</strong> e potranno essere consegnati a casa vostra entro <strong>2-3 giorni lavorativi</strong>... la qualità è sempre la stessa, in più è perfetto per chi non sa aspettare! ;-)
+                    </p>
+                    <a href="" class="btn btn-secondary">Outlet</a>
+                </div>
+            </div>
             </div>
         </div>
     </section>
