--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -28,7 +28,6 @@ ul.payment-list.pull-right li{
     color: #a0a0a0;
 }
 .tabBlock {
-    font-size: 1.3em;
     line-height: 1.8em;
     margin-top: 0.8em;
 }
@@ -37,4 +36,9 @@ footer{
 /*	border-top: 1px solid grey;
 	margin-top: 30px; */
 	background-color: #FAFAFA;
+
+  font-size: 1.1em;
+    h3{
+      font-size: 1.2em;
+    }
 }
