--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -13,9 +13,7 @@ ul.payment-list.pull-right li{
 .logofooter{
 	text-align: center;
 }
-.logofooter .logo{
-	width: 50%;
-}
+
 .socialicons {
     margin: 10px 0px;
 }
@@ -41,6 +39,11 @@ footer{
     h3{
       font-size: 1.2em;
     }
+
+  .logo{
+    max-height:8em;
+    width: auto;
+  }
 }
 
 .evid{
