--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -16,17 +16,8 @@
     h2{
       font-size: 4em;
     }
-    .price,.old-price{
-      display: block;
-    }
-    .price{
-      font-size:5em;
-      color: #ff0000;
-      font-weight: bold;
-    }
-    .old-price{
-      text-decoration: line-through;
-    }
+
+
 
     .azioni-veloci{
       max-width: 20em;
@@ -43,6 +34,30 @@
       display: flex;
     }
   }
+
+
+  .img-bg{
+    margin:0;
+    padding: 0;
+    .col{
+      margin:0;
+      padding:0;
+    }
+  }
+
+
+}
+
+.price,.old-price{
+  display: block;
+}
+.old-price{
+  text-decoration: line-through;
+}
+.price{
+  font-size:5em;
+  color: #ff0000;
+  font-weight: bold;
 }
 
 
@@ -89,9 +104,27 @@
 
 .product-thumbnail-preview{
 
+  .price{
+    font-size: 2em;
+    display: inline-block;
+  }
+  .old-price{
+    font-weight:bold;
+    display: inline-block;
+    margin-left: 0.3em;
+    opacity:0.7;
+  }
+
   .images{
     overflow: hidden;
     position: relative;
+    height: 100%;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    display: flex;
+    margin: 0;
+
     .image-1{
       transition: all 300ms;
     }
@@ -102,23 +135,131 @@
       left:0;
       transition: all 300ms;
       opacity: 0;
-      transform: scale(1.2);
+      transform: scale(1.2) translate(-50%,-50%);
+      left: 50%;
+      top: 50%;
+      min-height: 100%;
+      width: auto;
+      max-width: 120%;
     }
     &:hover{
       .image-2{
         transform: scale(1);
         opacity: 1;
+
+        /* object-fit: contain; */
+
+        transform: scale(1) translate(-50%,-50%);
       }
       .image-1{
         transform: scale(0.8);
       }
     }
+
+
+  }
+
+
+  .descrizione{
+    max-height: 3.1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size:0.9em;
   }
 
 
 
+
+
+  .c-p-outlet{
+
+  }
+
+
+
+  .badge-outlet{
+    display: none;
+  }
 }
 
+.c-p-outlet{
+  .badge-outlet{
+    display: block;
+  }
+}
+
+.badges{
+  top: 0;
+  right: 0;
+  margin-top: -1.5em;
+  position: absolute;
+  height: 3em;
+  width: auto;
+}
+
+.badge-outlet{
+  position: relative;
+  height:100%;
+  float: right;
+  min-width: 3em;
+  margin-left: 0.5em;
+
+  font-size:0.8em;
+   &:after{
+     content: '';
+     background-color: #00a5ed;
+     box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1), 0px 2px 6px rgba(0,0,0,0.2);
+
+     display: block;
+     top: 50%;
+     right: 0;
+
+     transform-origin: 50% 50%;
+     background-image: url("/assets/images/icon-outlet.png");
+     background-size: 80%;
+     background-position: center center;
+     background-repeat:no-repeat;
+     width:3em;
+     height:3em;
+     border-radius: 100%;
+     z-index: 2;
+     position: absolute;
+     transform: translate(0,-50%);
+   }
+
+  span{
+    position: relative;
+    /* right: 100%; */
+    background-color: #00a5ed;
+    padding: 0em 1em;
+    padding-right: 3em;
+    /* top: 50%; */
+    /* transform: translate(0, -50%); */
+    color: #fff;
+    font-weight: bold;
+
+    display: block;
+    line-height: 2em;
+    margin-top: 0.75em;
+    margin-right: 1em;
+    max-width: 0em;
+    overflow: hidden;
+    white-space: nowrap;
+    padding:0;
+    transition: all 100ms;
+    border-top-left-radius: 0.5em;
+    border-bottom-left-radius: 0.5em;
+  }
+  &:hover{
+    span{
+      max-width: 10em;
+      padding: 0em 1em;
+      padding-right: 3em;
+      padding-left: 2em;
+
+    }
+  }
+}
 
 #scheda-prodotto{
   .product-name{
@@ -255,6 +396,8 @@ body.scegliendo-variante{
   .owl-item {
     height: 100vh;
     overflow: hidden;
+
+
     img{
       max-width:none;
       width: auto;
@@ -262,10 +405,16 @@ body.scegliendo-variante{
       position: absolute;
       top:50%;
       left: 50%;
-      transform: translate(-50%,-50%)
+      transform: translate(-50%,-50%);
 
+        &[data-n="2"]{
+          width: 80%;
+          height: auto;
+        }
+      }
     }
-  }
+
+
 }
 
 
