--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -492,3 +492,16 @@ body.scegliendo-variante{
     }
   }
 }
+
+
+.scheda-prodotto{
+  .product-slogan{
+    font-weight: bold;
+    font-size: 1.2em;
+  }
+}
+.btn-add-to-cart{
+  display: block;
+  width: 100%;
+  font-size: 1.3em;
+}
