--- a/app/frontend/spagnesi/template/ecommerce/helpers/sameCategory.twig
+++ b/app/frontend/spagnesi/template/ecommerce/helpers/sameCategory.twig
@@ -1,7 +1,7 @@
 
 <div class="row">
     {% for prodotto in prodotti %}
-        <div class="col">
+        <div class="col-6">
             {% include "ecommerce/product/thumbnail-preview.twig" with {prodotto : prodotto} %}
         </div>
     {%  endfor %}
