--- a/app/assets/css/less/header.less
+++ b/app/assets/css/less/header.less
@@ -41,7 +41,7 @@
   }
   nav{
     display: inline-block;
-    ul{
+    > ul{
       display: inline-block;
       list-style: none;
       li{
@@ -55,22 +55,40 @@
           font-size: 1.1em;
 
           transition: all @headerSpeedTransition ;
+          position: relative;
+          z-index: 2;
         }
         ul{
-          display: none;
+          display: block;
           position: absolute;
-          top: 20px;
+          top: -1em;
           left: 0px;
           margin-left: 0px;
           padding-left: 0px;
+          padding-top: 3em;
+          padding-bottom: 10px;
+          z-index: 1;
+          background: rgba(0,0,0,0.5);
+          border-radius:0.3em;
+          transform: translate(0,-0.5em);
+          transition: all 300ms;
+          pointer-events: none;
+          opacity:0;
           li{
               display: block;
+            line-height: 2em;
           }
         }
       }
-      li:hover{
+      > li:hover{
+        a{
+          color: #fff;
+        }
         ul{
-          display: block;
+
+          transform: translate(0,0);
+          opacity:1;
+          pointer-events: auto;
           text-align: left;
         }
       }
